--- a/index.html
+++ b/index.html
@@ -214,6 +214,34 @@
     </div> -->
         
 
+
+<!-- hover effect on siblings -->
+<div class="container">
+    <div class="item">Box1</div>
+    <div class="item">Box2</div>
+    <div class="item">Box3</div>
+    <div class="item">Box4</div>
+</div>
+<!-- hover effect on siblings -->
+
+
+<!-- input -->
+    <div class="ctn-ip">
+        <div class="input-group">
+            <input type="text">
+            <label>ấn vào dây bro</label>
+        </div>
+    </div>
+<!-- input -->
+
+
+<!-- button -->
+<div class="ctnbt">
+    <div class="button">
+        learn more
+    </div>
+</div>
+<!-- button -->
 </body>
 </body>
 </html>
