--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <div class="ctn-ip">
         <div class="input-group">
             <input type="text">
-            <label>ấn vào dây bro</label>
+            <label>ấn vào đây bro</label>
         </div>
     </div>
 <!-- input -->
@@ -242,6 +242,24 @@
     </div>
 </div>
 <!-- button -->
+
+
+<!-- nabar -->
+    <!-- <nav class="navbar">
+        <a href="#" class="logo">
+            <img src="" alt="chèn ảnh vào đây">
+        </a>
+        <input type="checkbox" id="toggler">
+        <label for="toggler"><i class="fa-solid fa-bars"></i></label>
+        <div class="menu">
+            <ul class="list">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Cnotact</a></li>
+            </ul>
+        </div>
+    </nav> -->
+<!-- nabar -->
 </body>
 </body>
 </html>
